Solved python and java communication problem