@@ -4,12 +4,10 @@ import java.io.*;
 
 public class NLPManager {
 
-	public static String startNLP(String userInput) throws IOException {
-		ProcessBuilder pb = new ProcessBuilder("python", "cleaning_and_parsing.py", userInput);
-		Process p = pb.start();
- 
+	public static void startNLP(String userInput) throws Exception {
+		Process p = Runtime.getRuntime().exec(String.format("python3 NLP/cleaning_and_parsing.py %s", userInput));
 		BufferedReader in = new BufferedReader(new InputStreamReader(p.getInputStream()));
-		String output = new String(in.readLine());
+		String output = in.readLine();
 		return output;
 	}
 
